force-app/main/default/objects/CJFW_CollateralEnrollment__c/CJFW_CollateralEnrollment__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 담보 입보</description>
    <label>담보 입보</label>
    <nameField>
        <displayFormat>CE{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>