force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ActualCollateralAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualCollateralAmount__c</fullName>
    <description>실 담보금액</description>
    <label>실 담보금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>