force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>주소</description>
    <label>주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>