force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/AddressDetail__c.field-meta.xml
<CustomField>
    <fullName>AddressDetail__c</fullName>
    <description>상세주소</description>
    <label>상세주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>