force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/AdjAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjAdjustmentAmount__c</fullName>
    <description>심사 조정액</description>
    <label>심사 조정액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>