force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/AppraisalCompany__c.field-meta.xml
<CustomField>
    <fullName>AppraisalCompany__c</fullName>
    <description>감정처</description>
    <label>감정처</label>
    <length>255</length>
    <type>Text</type>
</CustomField>