force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/AppraisalDate__c.field-meta.xml
<CustomField>
    <fullName>AppraisalDate__c</fullName>
    <description>담보감정일</description>
    <label>담보감정일</label>
    <type>Date</type>
</CustomField>