force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/AppraisalReqNo__c.field-meta.xml
<CustomField>
    <fullName>AppraisalReqNo__c</fullName>
    <description>감정의뢰 번호</description>
    <label>감정의뢰 번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>