force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>승인일</label>
    <type>Date</type>
</CustomField>