force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <description>품의 진행 상태</description>
    <label>품의 진행 상태</label>
    <length>255</length>
    <type>Text</type>
</CustomField>