force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/APTArea__c.field-meta.xml
<CustomField>
    <fullName>APTArea__c</fullName>
    <description>아파트 면적</description>
    <label>아파트 면적</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>