force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <description>등기부상 권리 내역 - 가압류</description>
    <label>등기부상 권리 내역 - 가압류</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>