force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>생년월일</description>
    <label>생년월일</label>
    <type>Date</type>
</CustomField>