force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/BuildingArea__c.field-meta.xml
<CustomField>
    <fullName>BuildingArea__c</fullName>
    <description>건물면적</description>
    <label>건물면적</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>