force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CashCollateralContract__c.field-meta.xml
<CustomField>
    <fullName>CashCollateralContract__c</fullName>
    <description>현금담보약정서</description>
    <label>현금담보약정서</label>
    <length>255</length>
    <type>Text</type>
</CustomField>