force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CashCollateralDate__c.field-meta.xml
<CustomField>
    <fullName>CashCollateralDate__c</fullName>
    <description>현금담보 약정일</description>
    <label>현금담보 약정일</label>
    <type>Date</type>
</CustomField>