force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CashCollateralReceipt__c.field-meta.xml
<CustomField>
    <fullName>CashCollateralReceipt__c</fullName>
    <description>현금담보 전표번호</description>
    <label>현금담보 전표번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>