force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>종류</description>
    <label>종류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>예적금통장</fullName>
            </value>
            <value>
                <fullName>양도성예금증서</fullName>
            </value>
            <value>
                <fullName>기업어음</fullName>
            </value>
            <value>
                <fullName>나대지(잡종지)</fullName>
            </value>
            <value>
                <fullName>임야,전답,과수원</fullName>
            </value>
            <value>
                <fullName>아파트,단독주택</fullName>
            </value>
            <value>
                <fullName>연립주택</fullName>
            </value>
            <value>
                <fullName>다세대주택</fullName>
            </value>
            <value>
                <fullName>오피스텔</fullName>
            </value>
            <value>
                <fullName>공장</fullName>
            </value>
            <value>
                <fullName>상가점포</fullName>
            </value>
            <value>
                <fullName>업무용빌딩</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>보증보험</fullName>
            </value>
            <value>
                <fullName>신용보증기금</fullName>
            </value>
            <value>
                <fullName>은행지급보증</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>