force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CertificateNo__c.field-meta.xml
<CustomField>
    <fullName>CertificateNo__c</fullName>
    <description>증서번호</description>
    <label>증서번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>