force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CloseStatus__c.field-meta.xml
<CustomField>
    <fullName>CloseStatus__c</fullName>
    <label>해지여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>