force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralAddress__c.field-meta.xml
<CustomField>
    <fullName>CollateralAddress__c</fullName>
    <description>담보물 주소</description>
    <label>담보물 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>