force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralAddressDetail__c.field-meta.xml
<CustomField>
    <fullName>CollateralAddressDetail__c</fullName>
    <description>담보물 상세주소</description>
    <label>담보물 상세주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>