force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralNo__c.field-meta.xml
<CustomField>
    <fullName>CollateralNo__c</fullName>
    <description>담보번호 &gt; Auto Number 로 변경할 수도 있음</description>
    <label>담보번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>