force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CollateralPostalCode__c</fullName>
    <description>담보물 우편번호</description>
    <label>담보물 우편번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>