force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralType__c.field-meta.xml
<CustomField>
    <fullName>CollateralType__c</fullName>
    <description>담보구분</description>
    <label>담보구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>계약이행</fullName>
            </value>
            <value>
                <fullName>외상물품대금</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>