force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CollateralValue__c.field-meta.xml
<CustomField>
    <fullName>CollateralValue__c</fullName>
    <description>담보감정가액</description>
    <label>담보감정가액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>