force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CommencementDate__c.field-meta.xml
<CustomField>
    <fullName>CommencementDate__c</fullName>
    <description>개시일</description>
    <label>개시일</label>
    <type>Date</type>
</CustomField>