force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CompanyAppraisalCost__c.field-meta.xml
<CustomField>
    <fullName>CompanyAppraisalCost__c</fullName>
    <description>회사지원 - 감정비</description>
    <label>회사지원 - 감정비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>