force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/CompanySupportFee__c.field-meta.xml
<CustomField>
    <fullName>CompanySupportFee__c</fullName>
    <description>회사지원 - 수수료</description>
    <label>회사지원 - 수수료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>