force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객</description>
    <label>고객</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Existing Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>담보 입보</relationshipLabel>
    <relationshipName>Collateral_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>