force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Debtor__c.field-meta.xml
<CustomField>
    <fullName>Debtor__c</fullName>
    <description>채무자</description>
    <label>채무자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>