force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/DebtorRelationship__c.field-meta.xml
<CustomField>
    <fullName>DebtorRelationship__c</fullName>
    <description>채무자와의 관계</description>
    <label>채무자와의 관계</label>
    <length>255</length>
    <type>Text</type>
</CustomField>