force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <description>입금금액</description>
    <label>입금금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>