force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/DepositDate__c.field-meta.xml
<CustomField>
    <fullName>DepositDate__c</fullName>
    <description>입금일</description>
    <label>입금일</label>
    <type>Date</type>
</CustomField>