force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>비고</label>
    <type>TextArea</type>
</CustomField>