force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>지급 (만기)일</description>
    <label>지급 (만기)일</label>
    <type>Date</type>
</CustomField>