force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ExpirationStatus__c.field-meta.xml
<CustomField>
    <fullName>ExpirationStatus__c</fullName>
    <label>만기여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>