force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>삭제일(Auto)</description>
    <label>삭제일</label>
    <type>Date</type>
</CustomField>