force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_ActualCollateralValue__c.field-meta.xml
<CustomField>
    <fullName>FM_ActualCollateralValue__c</fullName>
    <description>실 담보 평가액</description>
    <formula>FM_CollateralValue__c * RecoveryCollateralRatio__c -  FM_TotalSeniorDebt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>실 담보 평가액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>