force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_BusinessRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>FM_BusinessRegisterNumber__c</fullName>
    <description>사업자등록번호</description>
    <formula>Customer__r.CompanyRegisterNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사업자등록번호</label>
    <type>Text</type>
</CustomField>