force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_CEO__c.field-meta.xml
<CustomField>
    <fullName>FM_CEO__c</fullName>
    <description>Account의 RepresentativeName__c: 대표자명</description>
    <formula>Customer__r.RepresentativeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>대표자명</label>
    <type>Text</type>
</CustomField>