force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_CollateralValue__c.field-meta.xml
<CustomField>
    <fullName>FM_CollateralValue__c</fullName>
    <description>담보설정 및 감정 탭의 담보감정가액</description>
    <formula>CollateralValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>감정가액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>