force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_CompanySupportExpenses__c.field-meta.xml
<CustomField>
    <fullName>FM_CompanySupportExpenses__c</fullName>
    <formula>CompanyAppraisalCost__c + CompanySupportBudget__c + CompanySupportFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>회사지원 - 경비계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>