force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_Customer__c.field-meta.xml
<CustomField>
    <fullName>FM_Customer__c</fullName>
    <description>(고객코드)고객명</description>
    <formula>&apos;(&apos;+ Customer__r.CustomerID__c  +&apos;)&apos; + Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>고객</label>
    <type>Text</type>
</CustomField>