force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_HeadOffice__c.field-meta.xml
<CustomField>
    <fullName>FM_HeadOffice__c</fullName>
    <description>영업조직 == HeadOffice</description>
    <formula>Customer__r.Owner.HeadOfficeLabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>영업조직</label>
    <type>Text</type>
</CustomField>