force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_MA__c.field-meta.xml
<CustomField>
    <fullName>FM_MA__c</fullName>
    <formula>Customer__r.Owner.LastName+ Customer__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MA</label>
    <type>Text</type>
</CustomField>