force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_MortgageAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_MortgageAmount__c</fullName>
    <formula>MortgageAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>근저당설정액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>