force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>FM_SalesGroup__c</fullName>
    <description>영업그룹</description>
    <formula>Customer__r.fm_SalesGroup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>영업그룹</label>
    <type>Text</type>
</CustomField>