force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_SU__c.field-meta.xml
<CustomField>
    <fullName>FM_SU__c</fullName>
    <description>사업장 == SU</description>
    <formula>Customer__r.Owner.SULabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사업장</label>
    <type>Text</type>
</CustomField>