force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_SubRoute__c.field-meta.xml
<CustomField>
    <fullName>FM_SubRoute__c</fullName>
    <description>소경로</description>
    <formula>Text(Customer__r.CustomerRoute__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>소경로</label>
    <type>Text</type>
</CustomField>