force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_SupplierSupportExpenses__c.field-meta.xml
<CustomField>
    <fullName>FM_SupplierSupportExpenses__c</fullName>
    <formula>SupplierAppraisalCost__c + SupplierSupportBudget__c + SupplierSupportFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>거래처 - 경비계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>