force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_TotalAppraisalCost__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalAppraisalCost__c</fullName>
    <description>계 - 감정비</description>
    <formula>SupplierAppraisalCost__c + CompanyAppraisalCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계 - 감정비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>