force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_TotalBudget__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalBudget__c</fullName>
    <description>계 - 설정비</description>
    <formula>SupplierSupportBudget__c + CompanySupportBudget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계 - 설정비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>