force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalExpenses__c</fullName>
    <description>계 - 경비계</description>
    <formula>FM_SupplierSupportExpenses__c + FM_CompanySupportExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계 - 경비계</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>