force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_TotalFees__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalFees__c</fullName>
    <description>계 - 수수료</description>
    <formula>SupplierSupportFee__c +  CompanySupportFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계 - 수수료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>