force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/FM_TotalSeniorDebt__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalSeniorDebt__c</fullName>
    <formula>TotalSeniorDebt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>선순위 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>