force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/GuaranteeAmount__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeAmount__c</fullName>
    <description>보증(발행)금액</description>
    <label>보증(발행)금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>