force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/GuaranteeEndDate__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeEndDate__c</fullName>
    <description>보증만기일</description>
    <label>보증만기일</label>
    <type>Date</type>
</CustomField>