force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/GuaranteeStartDate__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeStartDate__c</fullName>
    <description>보증시작일</description>
    <label>보증시작일</label>
    <type>Date</type>
</CustomField>