force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/GuarantorName__c.field-meta.xml
<CustomField>
    <fullName>GuarantorName__c</fullName>
    <description>연대보증인 이름</description>
    <label>연대보증인 이름</label>
    <length>255</length>
    <type>Text</type>
</CustomField>