force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsBankGuarantee__c.field-meta.xml
<CustomField>
    <fullName>IsBankGuarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>은행지급보증서</description>
    <label>은행지급보증서</label>
    <type>Checkbox</type>
</CustomField>