force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsBond__c.field-meta.xml
<CustomField>
    <fullName>IsBond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>채권</description>
    <label>채권</label>
    <type>Checkbox</type>
</CustomField>