force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsBondCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsBondCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>보증보험증서</description>
    <label>보증보험증서</label>
    <type>Checkbox</type>
</CustomField>