force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>증서</description>
    <label>증서</label>
    <type>Checkbox</type>
</CustomField>