force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsCGFCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsCGFCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>신용보증기금증서</description>
    <label>신용보증기금증서</label>
    <type>Checkbox</type>
</CustomField>