force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsCollateralProvisionApproval__c.field-meta.xml
<CustomField>
    <fullName>IsCollateralProvisionApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>타인물건인 경우 추가 - 담보제공승낙서</description>
    <label>타인물건인 경우 추가 - 담보제공승낙서</label>
    <type>Checkbox</type>
</CustomField>