force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsCommodityTradeAgreement__c.field-meta.xml
<CustomField>
    <fullName>IsCommodityTradeAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>상품거래약정서</description>
    <label>상품거래약정서</label>
    <type>Checkbox</type>
</CustomField>