force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsConfirmedDateAcceptanceLetter__c.field-meta.xml
<CustomField>
    <fullName>IsConfirmedDateAcceptanceLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>확정일자 있는 질권설정승낙서</description>
    <label>확정일자 있는 질권설정승낙서</label>
    <type>Checkbox</type>
</CustomField>