force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsLandRegCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsLandRegCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>공통 - 토지건물등기부등본</description>
    <label>공통 - 토지건물등기부등본</label>
    <type>Checkbox</type>
</CustomField>