force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsMortgageDeed__c.field-meta.xml
<CustomField>
    <fullName>IsMortgageDeed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>공통 - 근저당권설정계약서</description>
    <label>공통 - 근저당권설정계약서</label>
    <type>Checkbox</type>
</CustomField>