force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsProviderSealCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsProviderSealCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>타인물건인 경우 추가 - 담보제공자인감증명서</description>
    <label>타인물건인 경우 추가 - 담보제공자인감증명서</label>
    <type>Checkbox</type>
</CustomField>