force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsRentalAgreement__c.field-meta.xml
<CustomField>
    <fullName>IsRentalAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>공통 - 임대차확인각서</description>
    <label>공통 - 임대차확인각서</label>
    <type>Checkbox</type>
</CustomField>