force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsSealCertificate__c.field-meta.xml
<CustomField>
    <fullName>IsSealCertificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>인감증명서</description>
    <label>인감증명서</label>
    <type>Checkbox</type>
</CustomField>