force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsSecurityAgreement__c.field-meta.xml
<CustomField>
    <fullName>IsSecurityAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>질권설정계약서</description>
    <label>질권설정계약서</label>
    <type>Checkbox</type>
</CustomField>