force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsStampedDepositSlip__c.field-meta.xml
<CustomField>
    <fullName>IsStampedDepositSlip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>통장인감이 날인된 예금청구서</description>
    <label>통장인감이 날인된 예금청구서</label>
    <type>Checkbox</type>
</CustomField>