force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>발행 (보증)일</description>
    <label>발행 (보증)일</label>
    <type>Date</type>
</CustomField>