force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <description>발행처</description>
    <label>발행처</label>
    <length>255</length>
    <type>Text</type>
</CustomField>