force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IssuerAddress__c.field-meta.xml
<CustomField>
    <fullName>IssuerAddress__c</fullName>
    <description>발행처 주소</description>
    <label>발행처 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>