force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IssuerAddressDetail__c.field-meta.xml
<CustomField>
    <fullName>IssuerAddressDetail__c</fullName>
    <description>발행처 상세주소</description>
    <label>발행처 상세주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>