force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IssuerPostalCode__c.field-meta.xml
<CustomField>
    <fullName>IssuerPostalCode__c</fullName>
    <description>발행처 우편번호</description>
    <label>발행처 우편번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>