force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsUnregisteredBuildingGLA__c.field-meta.xml
<CustomField>
    <fullName>IsUnregisteredBuildingGLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>미등기 건축물있는 경우 추가 - 지상권설정계약서</description>
    <label>미등기 건축물있는 경우 추가 - 지상권설정계약서</label>
    <type>Checkbox</type>
</CustomField>