force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsVacantLandGLA__c.field-meta.xml
<CustomField>
    <fullName>IsVacantLandGLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>건축물없는 토지인 경우 추가 - 지상권설정계약서</description>
    <label>건축물없는 토지인 경우 추가 - 지상권설정계약서</label>
    <type>Checkbox</type>
</CustomField>