force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/IsVoucher__c.field-meta.xml
<CustomField>
    <fullName>IsVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>전표</description>
    <label>전표</label>
    <type>Checkbox</type>
</CustomField>