force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/LandArea__c.field-meta.xml
<CustomField>
    <fullName>LandArea__c</fullName>
    <description>토지면적</description>
    <label>토지면적</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>