force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/LeaseholdRight__c.field-meta.xml
<CustomField>
    <fullName>LeaseholdRight__c</fullName>
    <description>등기부상 권리 내역 - 전세권</description>
    <label>등기부상 권리 내역 - 전세권</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>