force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/MaturityDate__c.field-meta.xml
<CustomField>
    <fullName>MaturityDate__c</fullName>
    <description>만기일</description>
    <label>만기일</label>
    <type>Date</type>
</CustomField>