force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/MonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRent__c</fullName>
    <description>임대차 내역 - 월세</description>
    <label>임대차 내역 - 월세</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>