force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/MortgageAmount__c.field-meta.xml
<CustomField>
    <fullName>MortgageAmount__c</fullName>
    <description>근저당 설정 금액</description>
    <label>근저당 설정 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>