force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/MortgageDate__c.field-meta.xml
<CustomField>
    <fullName>MortgageDate__c</fullName>
    <description>근저당 설정일</description>
    <label>근저당 설정일</label>
    <type>Date</type>
</CustomField>