force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Owneroccupancy__c.field-meta.xml
<CustomField>
    <fullName>Owneroccupancy__c</fullName>
    <description>소유자 거주 여부</description>
    <label>소유자 거주 여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>본인거주</fullName>
            </value>
            <value>
                <fullName>타인거주</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>