force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>보험료 납부 유형</description>
    <label>보험료 납부 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>당사</fullName>
            </value>
            <value>
                <fullName>고객</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>