force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>우편번호</description>
    <label>우편번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>