force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessStatus__c</fullName>
    <label>처리구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>미상신</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>