force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>제공자</description>
    <label>제공자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>