force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ProviderAddress__c.field-meta.xml
<CustomField>
    <fullName>ProviderAddress__c</fullName>
    <description>제공자 주소</description>
    <label>제공자 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>