force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ProviderAddressDetail__c.field-meta.xml
<CustomField>
    <fullName>ProviderAddressDetail__c</fullName>
    <description>제공자 상세주소</description>
    <label>제공자 상세주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>