force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/ProviderPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ProviderPostalCode__c</fullName>
    <description>제공자 우편번호</description>
    <label>제공자 우편번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>