force-app/main/default/objects/CJFW_CollateralEnrollment__c/fields/PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount__c</fullName>
    <description>구입금액</description>
    <label>구입금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>